@@ -1,0 +1,5 @@
+#!/usr/bin/env python
+
+from wxPython.tools.img2xpm import main
+main()
+
