@@ -1,0 +1,4 @@
+#!/usr/bin/env python
+
+from wxPython.tools.XRCed.xrced import main
+main()
