@@ -1,14 +1,14 @@
 #!/usr/bin/env python
 """
-img2xpm.py  -- convert several image formats to XPM
+img2png.py  -- convert several image formats to PNG format
 
 Usage:
 
-    img2xpm.py [options] image_files...
+    img2png.py [options] image_files...
 
 Options:
 
-    -o <dir>       The directory to place the .xpm file(s), defaults to
+    -o <dir>       The directory to place the .png file(s), defaults to
                    the current directory.
 
     -m <#rrggbb>   If the original image has a mask or transparency defined
@@ -16,8 +16,8 @@ Options:
                    override the default or provide a new mask by specifying
                    a colour in the image to mark as transparent.
 
-    -n <name>      A filename to write the .xpm data to.  Defaults to the
-                   basename of the image file + '.xpm'  This option overrides
+    -n <name>      A filename to write the .png data to.  Defaults to the
+                   basename of the image file + '.png'  This option overrides
                    the -o option.
 """
 
@@ -26,6 +26,11 @@ import sys
 import img2img
 from wxPython import wx
 
-img2img.main(sys.argv[1:], wx.wxBITMAP_TYPE_XPM, ".xpm", __doc__)
+def main():
+    img2img.main(sys.argv[1:], wx.wxBITMAP_TYPE_PNG, ".png", __doc__)
+
+if __name__ == '__main__':
+    main()
+
 
 
